--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
    
     <title>Minhajul Abedin Rahat</title>
+    <link rel="stylesheet" href="style.css" >
 </head>
 <body>
+    <h1>WELCOME TO</h1>
+    <h1>RAHAT'S PORTFOLIO</h1>
     
 </body>
 </html>
